--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: '3.7'
 
-services:
+services: 
   mysql:
-    image: mysql:8
-    container_name: mysql
+    image: mysql:8.0
+    container_name: mysql2
     volumes:
       - db:/var/lib/mysql
     ports:
@@ -15,9 +15,9 @@ services:
       - MYSQL_PASSWORD=root
     networks:
       - primeira-network
-
+  
   api-rocket:
-    build:
+    build: 
       context: .
     container_name: api-rocket
     ports:
