--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,6 @@ jobs:
 
       - run: yarn
       - run: yarn run test
+
+      - name: Build docker image
+        run: docker build -t rocketseat-ci-api:latest .
