--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,18 @@ jobs:
       - name: Login into the container registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME  }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}    
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }} 
 
-      - name: Build docker image
-        run: docker build -t iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }} .
+      - name: Build and Push
+        uses: docker/build-push-actions@v5
+        with:
+          push: true
+          tags: iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }},iurycordeiro/rocketseat-ci-api:latest
 
-      - name: Push image
-        run: docker push iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }}
+
+      # - name: Build docker image
+      #   run: docker build -t iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }} .
+
+      # - name: Push image
+      #   run: docker push iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }}
