--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,17 +28,27 @@ jobs:
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-      - name: Login into the container registry
-        uses: docker/login-action@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }} 
+          role-to-assume: 'arn:aws:iam::173003892882:role/ecr-role'
+          aws-region: us-east-2
 
-      - name: Build and Push
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }},iurycordeiro/rocketseat-ci-api:latest
+      - name: Login to AWS ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      #- name: Login into the container registry
+      #  uses: docker/login-action@v3
+      #  with:
+      #    username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #    password: ${{ secrets.DOCKERHUB_TOKEN }} 
+
+      #- name: Build and Push
+      #  uses: docker/build-push-action@v5
+      #  with:
+      #    push: true
+      #    tags: iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }},iurycordeiro/rocketseat-ci-api:latest
 
 
       # - name: Build docker image
