--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,21 +42,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      #- name: Login into the container registry
-      #  uses: docker/login-action@v3
-      #  with:
-      #    username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #    password: ${{ secrets.DOCKERHUB_TOKEN }} 
-
-      #- name: Build and Push
-      #  uses: docker/build-push-action@v5
-      #  with:
-      #    push: true
-      #    tags: iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }},iurycordeiro/rocketseat-ci-api:latest
-
-
-      # - name: Build docker image
-      #   run: docker build -t iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }} .
-
+      - name: Build docker image
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          TAG: ${{ steps.generate_tag.outputs.sha }}
+        run: |
+          docker build -t $REGISTRY/rocketseat-ci:$TAG .
+          docker push $REGISTRY/rocketseat-ci:$tTAG
       # - name: Push image
       #   run: docker push iurycordeiro/rocketseat-ci-api:${{ steps.generate_tag.outputs.sha }}
