--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,11 @@ jobs:
       - run: yarn
       - run: yarn run test
 
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_OUTPUT: ${{ secrets.GH_TOKEN }}
+
       - name: Generate tag
         id: generate_tag
         run: |
