--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,13 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with: 
-          node-version: 20
+          node-version: 20.8.1
           cache: "yarn"
 
-      - run: yarn
+      - name: Remove package-lock.json
+        run: rm -f package-lock.json
+
+      - run: yarn install --frozen-lockfile
       - run: yarn run test
 
       - name: Semantic Release
