--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with: 
-          node-version: 20.8.1
+          node-version: 'lts/*'
           cache: "yarn"
 
       - name: Remove package-lock.json
