--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,8 +58,8 @@ jobs:
         run: |
           docker build -t $REGISTRY/rocketseat-ci:$TAG .
           docker push $REGISTRY/rocketseat-ci:$TAG
-          docker tag -t $REGISTRY/rocketseat-ci:$TAG $REGISTRY/rocketseat-ci:latest
-          docker push $REGISTRY/rocketseat-ci:$latest
+          docker tag $REGISTRY/rocketseat-ci:$TAG $REGISTRY/rocketseat-ci:latest
+          docker push $REGISTRY/rocketseat-ci:latest
           IMAGE=$(echo $REGISTRY/rocketseat-ci:$TAG)
           echo "image=$IMAGE" >> $GITHUB_OUTPUT
 
