--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
           cpu: 1
           memory: 2
           port: 3000
-          wait-for-service-stability-seconds: 180
+          wait-for-service-stability-seconds: 600
 
       - name: App Runner check
-        run: echo "App Runner running... ${{ steps.deploy.app-runner.outputs.service-url }}"
+        run: echo "App Runner running... ${{ steps.deploy-app-runner.outputs.service-url }}"
